samples/_failures_safe/1761373938_87ed25_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e133f527.c: In function ‘matrix_input’:
./samples/SAFE/__tmp_e133f527.c:116:25: error: missing terminating " character
  116 |     int rows = read_int("Enter number of rows (1-10
      |                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_e133f527.c:116:5: error: expected expression at end of input
  116 |     int rows = read_int("Enter number of rows (1-10
      |     ^~~
./samples/SAFE/__tmp_e133f527.c:116:16: error: too few arguments to function ‘read_int’
  116 |     int rows = read_int("Enter number of rows (1-10
      |                ^~~~~~~~
./samples/SAFE/__tmp_e133f527.c:100:5: note: declared here
  100 | int read_int(const char* prompt, int min, int max) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_e133f527.c:116:5: error: expected declaration or statement at end of input
  116 |     int rows = read_int("Enter number of rows (1-10
      |     ^~~
